[package]
name = "tls-scanner-esae"
version = "0.1.0"
edition = "2021"
authors = ["Timme Bethe <timme@timmebethe.nl>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
clap = { version = "3.2", features = ["derive"] }

openssl = "0.10"

